@startuml
!theme plain

package "プレゼンテーション層" {
  class GUI {
    +updateDisplay()
    +handleUserInput()
  }
}

package "アプリケーション層" {
  class GameController {
    +startGame()
    +handleClick()
    +purchaseUpgrade()
    +purchaseProducer()
    +saveGame()
    +loadGame()
  }
}

package "ドメイン層" {
  class Player {
  }

  class Resource {
    +quantity: decimal
    +name: string
  }
  
  class Producer {
    +produce()
  }

  class Upgrade {
    +applyUpgrade()
  }

  class Statistics {
    +updateStats()
    +displayStats()
  }
}

package "データアクセス層" {
  class DataStorage {
    +loadGame(): GameData
    +saveGame(gameData: GameData)
  }
  class PlayerData {
    +resources: Resource[]
    +upgrades: Upgrade[]
    +producers: Producer[]
  }
  class GameData {
    +playerData: PlayerData
    +resources: Resource[]
    +statistics: Statistics
  }
}

GUI ..> GameController : uses
GameController ..> Player : uses
GameController ..> Resource : uses
GameController ..> Producer : uses
GameController ..> Upgrade : uses
GameController ..> Statistics : uses
GameController ..> DataStorage : uses
DataStorage --> PlayerData : manages
DataStorage --> GameData : manages

@enduml
